--- a/about.html
+++ b/about.html
@@ -223,10 +223,10 @@
                     <div class="video-column col-lg-5 col-md-12 col-sm-12">
                         <div class="inner-column wow slideInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
                             <div class="image">
-                                <img src="images/resource/aboutmain.jpg" alt="" />
+                                <img src="images/resource/mamSceecs24.jpg" alt="" />
                             </div>
                             <div class="video-outer">
-                                <a href="https://youtu.be/wcskvfbf71A" class="lightbox-image video-boxed"><span
+                                <a href="images/resource/sceecs trailer.mp4" class="lightbox-image video-boxed"><span
                                         class="flaticon-play-button"></span></a>
                             </div>
                         </div>
@@ -448,12 +448,12 @@
                     <div class="gallery-block">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/teams.jpg" alt="" />
+                                <img src="images/resource/loveBabbarImage.jpg" alt="" />
                                 <!-- Overlay Box -->
                                 <div class="overlay-box">
                                     <div class="overlay-inner">
                                         <div class="overlay-content">
-                                            <a class="plus" href="images/resource/teams.jpg" data-fancybox="gallery-1"
+                                            <a class="plus" href="images/resource/loveBabbarImage.jpg" data-fancybox="gallery-1"
                                                 data-caption=""><span class="flaticon-add-1"></span></a>
                                         </div>
                                     </div>
@@ -466,12 +466,12 @@
                     <div class="gallery-block">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/gallery/20.jpg" alt="" />
+                                <img src="images/resource/jyotiMamImage.jpg" alt="" />
                                 <!-- Overlay Box -->
                                 <div class="overlay-box">
                                     <div class="overlay-inner">
                                         <div class="overlay-content">
-                                            <a class="plus" href="images/gallery/20.jpg" data-fancybox="gallery-1"
+                                            <a class="plus" href="images/resource/jyotiMamImage.jpg" data-fancybox="gallery-1"
                                                 data-caption=""><span class="flaticon-add-1"></span></a>
                                         </div>
                                     </div>
@@ -484,12 +484,12 @@
                     <div class="gallery-block">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/gallery/15.jpg" alt="" />
+                                <img src="images/resource/audiImage.JPG" alt="" />
                                 <!-- Overlay Box -->
                                 <div class="overlay-box">
                                     <div class="overlay-inner">
                                         <div class="overlay-content">
-                                            <a class="plus" href="images/gallery/15.jpg" data-fancybox="gallery-1"
+                                            <a class="plus" href="images/resource/audiImage.JPG" data-fancybox="gallery-1"
                                                 data-caption=""><span class="flaticon-add-1"></span></a>
                                         </div>
                                     </div>
@@ -502,12 +502,12 @@
                     <div class="gallery-block">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/resource/13.jpg" alt="" />
+                                <img src="images/resource/conference.jpg" alt="" />
                                 <!-- Overlay Box -->
                                 <div class="overlay-box">
                                     <div class="overlay-inner">
                                         <div class="overlay-content">
-                                            <a class="plus" href="images/resource/13.jpg" data-fancybox="gallery-1"
+                                            <a class="plus" href="images/resource/conference.jpg" data-fancybox="gallery-1"
                                                 data-caption=""><span class="flaticon-add-1"></span></a>
                                         </div>
                                     </div>
@@ -520,12 +520,12 @@
                     <div class="gallery-block">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/gallery/01.jpg" alt="" />
+                                <img src="images/resource/love.jpg" alt="" />
                                 <!-- Overlay Box -->
                                 <div class="overlay-box">
                                     <div class="overlay-inner">
                                         <div class="overlay-content">
-                                            <a class="plus" href="images/gallery/01.jpg" data-fancybox="gallery-1"
+                                            <a class="plus" href="images/resource/love.jpg" data-fancybox="gallery-1"
                                                 data-caption=""><span class="flaticon-add-1"></span></a>
                                         </div>
                                     </div>
@@ -538,12 +538,12 @@
                     <div class="gallery-block">
                         <div class="inner-box">
                             <div class="image">
-                                <img src="images/gallery/17.jpg" alt="" />
+                                <img src="images/resource/audi2.jpg" alt="" />
                                 <!-- Overlay Box -->
                                 <div class="overlay-box">
                                     <div class="overlay-inner">
                                         <div class="overlay-content">
-                                            <a class="plus" href="images/gallery/17.jpg" data-fancybox="gallery-1"
+                                            <a class="plus" href="images/resource/audi2.jpg" data-fancybox="gallery-1"
                                                 data-caption=""><span class="flaticon-add-1"></span></a>
                                         </div>
                                     </div>
