--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
-                <a href="#check" ><span class="theme-btn btn-style-three ">Check For Schedule</span></a>
+                <a href="#check" ><span class="theme-btn btn-style-three ">Coming Soon</span></a>
               </div>
             </div>
           </div>
@@ -509,7 +509,7 @@
             <div class="content">
               <a href="images/resource/sceecs trailer.mp4" class="lightbox-image overlay-box"><span
                   class="flaticon-play-button"><i class="ripple"></i></span></a>
-              <h3>Discover What’s Ahead</h3>
+              <h3>Sceecs'24 Recap</h3>
             </div>
           </figure>
         </div>
@@ -1399,6 +1399,7 @@
         <div class="sponsors-list">
           <img style="height: 100px;"  src="images/clients/talent_battle_logo (1).png" alt="" />
           <img src="images/clients/interview_cake.png" alt="" />
+          <img src="images/clients/iete.png" alt="" />
           <img src="images/clients/guvi-logo.png" alt="" />
           <img src="images/clients/1.png" alt="" />
           <img src="images/clients/2.png" alt="" />
