--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>SCEECS'24 - About</title>
+    <title>SCEECS'25 - About</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -372,10 +372,10 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Devansh.jpeg" alt="" />
+                                <img src="./images/Tilak.jpg" alt="" />
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Mr. Devansh Kapri</a></h3>
+                                <h3><a href="#">Mr. Tilak Mangal</a></h3>
                                 <div class="designation">Organizing Co-Chair</div>
                             </div>
                         </div>
@@ -387,10 +387,10 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Vidushi Sharma.jpg" alt="" />
+                                <img src="./images/Ayush Verma.jpg" alt="" />
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Ms. Vidushi Sharma
+                                <h3><a href="#">Mr. Ayush Verma
                                 </a></h3>
                                 <div class="designation">Publication Co-Chair</div>
                             </div>
@@ -403,11 +403,11 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Arya Jain.jpg" alt="" />
+                                <img src="./images/Deepanshu Jain.jpg" alt="" />
                             </div>
                             <div class="lower-content">
                                 <h3 style="font-size: 25px">
-                                    <a href="#">Ms. Arya Jain</a>
+                                    <a href="#">Mr. Deepanshu Jain</a>
                                 </h3>
                                 <div class="designation">Program Co-Chair</div>
                             </div>
@@ -420,10 +420,10 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Aditya Pagnis.jpg" alt="" />
+                                <img src="./images/Rohaan khan.jpg" alt="" />
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Mr. Aditya Pagnis</a></h3>
+                                <h3><a href="#">Mr. Rohaan Khan</a></h3>
                                 <div class="designation">Finance Co-Chair</div>
                             </div>
                         </div>
@@ -675,7 +675,7 @@
       <!-- Sec Title -->
 
       <div class="sec-title centered">
-        <div class="title">Welcome to SCEECS 2024</div>
+        <div class="title">Welcome to SCEECS 2025</div>
         <h2>Technical Sponsors</h2>
         <div class="separator"></div>
       </div>
