--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>SCEECS'24 - Contact Us</title>
+    <title>SCEECS'25 - Contact Us</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
@@ -231,7 +231,7 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Devansh.jpeg" alt="" />
+                                <img src="./images/Tilak.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-8529458935"><span class="fa fa-phone"></span></a></li> -->
                                     <!-- <li>
@@ -239,13 +239,13 @@
                       ></a>
                                     </li> -->
                                     <li>
-                                        <a href="https://www.linkedin.com/in/devansh-kapri/"
+                                        <a href="https://www.linkedin.com/in/tilak-mangal-768855241/"
                                             target="_blank"><span class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#" target="_blank">Mr. Devansh Kapri</a></h3>
+                                <h3><a href="#" target="_blank">Mr. Tilak Mangal</a></h3>
                                 <div class="designation">Organizing Co-chair</div>
                             </div>
                         </div>
@@ -257,18 +257,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Vidushi Sharma.jpg" alt="" />
+                                <img src="./images/Ayush Verma.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7987307024"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/vidushi-sharma-719134204/"
+                                        <a href="https://www.linkedin.com/in/ayush-kr-verma-2b986922b/"
                                             target="_blank"><span class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Ms. Vidushi Sharma
+                                <h3><a href="#">Mr. Ayush Verma
                                 </a></h3>
                                 <div class="designation">Publication Co-chair</div>
                             </div>
@@ -280,18 +280,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Arya Jain.jpg" alt="" />
+                                <img src="./images/Deepanshu Jain.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7987307024"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/arya-jain-0816421b8/" target="_blank"><span
+                                        <a href="https://www.linkedin.com/in/deepanshu-jain-90831b208" target="_blank"><span
                                                 class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#">Ms. Arya Jain</a></h3>
+                                <h3><a href="#">Mr. Deepanshu Jain</a></h3>
                                 <div class="designation">Program Co-chair</div>
                             </div>
                         </div>
@@ -303,18 +303,18 @@
                             <div class="dots-one"></div>
                             <div class="dots-two"></div>
                             <div class="image">
-                                <img src="Aditya Pagnis.jpg" alt="" />
+                                <img src="./images/Rohaan khan.jpg" alt="" />
                                 <ul class="social-box">
                                     <!-- <li><a href="tel:+91-7426913306"><span class="fa fa-phone"></span></a></li> -->
 
                                     <li>
-                                        <a href="https://www.linkedin.com/in/aditya-pagnis-0a927b218/" target="_blank"><span
+                                        <a href="https://www.linkedin.com/in/rohaan-khan-334135244/" target="_blank"><span
                                                 class="fab fa-linkedin-in"></span></a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="lower-content">
-                                <h3><a href="#" target="_blank">Mr. Aditya Pagnis</a></h3>
+                                <h3><a href="#" target="_blank">Mr. Rohaan Khan</a></h3>
                                 <div class="designation">Finance Co-chair</div>
                             </div>
                         </div>
