changes to gallery

--- a/index.html
+++ b/index.html
@@ -1964,12 +1964,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/26.jpg" alt="" />
+                <img src="images/gallery/congference1.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/09.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/congference1.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -1982,12 +1982,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/01.jpg" alt="" />
+                <img src="images/gallery/lakshay1.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/01.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/lakshay1.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2000,12 +2000,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/02.jpg" alt="" />
+                <img src="images/gallery/conference31.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/03.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/conference31.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2018,12 +2018,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/04.jpg" alt="" />
+                <img src="images/gallery/workshop11.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/04.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/workshop11.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2036,12 +2036,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/03.jpg" alt="" />
+                <img src="images/gallery/babbarSeminar1.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/05.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/babbarSeminar1.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2054,12 +2054,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/06.jpg" alt="" />
+                <img src="images/gallery/lakshaySeminar.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/06.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/lakshaySeminar.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2072,12 +2072,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/05.jpg" alt="" />
+                <img src="images/gallery/babbar1.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/02.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/babbar1.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
@@ -2090,12 +2090,12 @@
           <div class="gallery-block col-lg-3 col-md-6 col-sm-12">
             <div class="inner-box">
               <div class="image">
-                <img src="images/gallery/08.jpg" alt="" />
+                <img src="images/gallery/team.jpg" alt="" />
                 <!-- Overlay Box -->
                 <div class="overlay-box">
                   <div class="overlay-inner">
                     <div class="overlay-content">
-                      <a class="plus" href="images/gallery/08.jpg" data-fancybox="gallery-1" data-caption=""><span
+                      <a class="plus" href="images/gallery/team.jpg" data-fancybox="gallery-1" data-caption=""><span
                           class="flaticon-add-1"></span></a>
                     </div>
                   </div>
