--- a/gallery.html
+++ b/gallery.html
@@ -186,7 +186,7 @@
 
                     <div class="filter-list row clearfix">
                         <!-- Gallery Block -->
-                        <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12">
+                        <div class="gallery-block mix all gl col-lg-4 col-md-6 col-sm-12" style="display: none;">
                             <div class="inner-box">
                                 <div class="image">
                                     <img src="bg.png" alt="" />
@@ -350,12 +350,12 @@
                         <div class="gallery-block mix all conference col-lg-4 col-md-6 col-sm-12">
                             <div class="inner-box">
                                 <div class="image">
-                                    <img src="images/gallery/congference1.jpg" alt="" />
+                                    <img src="images/gallery/conference1.jpg" alt="" />
                                     <!-- Overlay Box -->
                                     <div class="overlay-box">
                                         <div class="overlay-inner">
                                             <div class="overlay-content">
-                                                <a class="plus" href="images/gallery/congference1.jpg" data-fancybox="gallery-2"
+                                                <a class="plus" href="images/gallery/conference1.jpg" data-fancybox="gallery-2"
                                                     data-caption=""><span class="flaticon-add-1"></span></a>
                                             </div>
                                         </div>
