--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
-                <a href="#check" ><span class="theme-btn btn-style-three ">Coming Soon</span></a>
+                <a href="docs/Call_for_papers_Final[11}123-01.png" download="callforpaper" ><span class="theme-btn btn-style-three ">Call For Paper</span></a>
               </div>
             </div>
           </div>
