--- a/callforpaper.html
+++ b/callforpaper.html
@@ -443,7 +443,7 @@
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
                                     <div class="program-info">
-                                        REGISTRATION STARTED<span class="time">WILL BE INFORMED</span><span class="dott spcialDottRegistration"></span>
+                                        REGISTRATION STARTED<span class="time">SOON</span><span class="dott spcialDottRegistration"></span>
                                     </div>
                                     <h3><a>Get registered on Microsoft CMT.</a></h3>
                                 </div>
@@ -458,7 +458,7 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info">
-                                       SUBMIT PAPER<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                                       SUBMIT PAPER<span class="time">5 Nov 2024</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Submit your paper through Microsoft CMT.</a></h3>
                                 </div>
@@ -490,7 +490,7 @@
                                     <!-- Program Info -->
                                     <!-- its media queries is on the top of the page -->
                                     <div class="program-info specialBox"  >
-                                        Acceptance Notification<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                                        Acceptance Notification<span class="time">30 Nov 2024</span><span class="dott"></span>
                                     </div>
                                     <h3><a>Accepted papers will be notified through email.</a></h3>
                                 </div>
@@ -506,7 +506,7 @@
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
                                     <div class="program-info specialBoxCameraReady">
-                                        Camera Ready Submissions<span class="time">WILL BE INFORMED</span><span class="dott" ></span>
+                                        Camera Ready Submissions<span class="time">15 Dec 2024</span><span class="dott" ></span>
                                     </div>
                                     <h3><a>Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
                                 </div>
