--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                               <!-- Program Info -->
                               <!-- its media queries is on the top of the page -->
                               <div class="program-info paperPresentationBox"  >
-                                  Paper Presentation<span class="time">WILL BE INFORMED</span><span class="dott"></span>
+                                  Paper Presentation<span class="time">19-20 Jan</span><span class="dott"></span>
                               </div>
                               <h3><a>Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                           </div>
@@ -2357,7 +2357,7 @@
 
           <div class="newsletter-form">
             <div class="form-group">
-              <!-- <a href="docs/Call_for_papers_Final[11}1.pdf" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
+               <a href="docs/Call_for_papers_Final[11}123-01.png" target="_blank" class="theme-btn btn-style-one">Download Brochure</a> -->
             </div>
           </div>
         </div>
