--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                               <!-- Program Info -->
                               <!-- its media queries is on the top of the page -->
                               <div class="program-info paperPresentationBox"  >
-                                  Paper Presentation<span class="time">19-20 Jan</span><span class="dott"></span>
+                                  Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott"></span>
                               </div>
                               <h3><a>Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                           </div>
