--- a/callforpaper.html
+++ b/callforpaper.html
@@ -584,7 +584,7 @@ For papers in which all authors are employed by the European Union, the copyrigh
 ©2024 European Union
 For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024 IEEE
                             </p>
-                            <a href="https://cmt3.research.microsoft.com/SCEECS2024"
+                            <a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025"
                                 class="theme-btn btn-style-one">Submit Via Microsoft CMT</a>
                         </div>
                     </div>
@@ -630,7 +630,7 @@ For all other papers the copyright notice is: 979-8-3503-4846-0/24/$31.00 ©2024
                                     through Microsoft CMT.
                                 </span>
                             </p>
-                            <a href="https://cmt3.research.microsoft.com/SCEECS2024" target="_blank"
+                            <a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank"
                                 class="theme-btn btn-style-two" id="ppbtn"></span>Submit Via
                                 Microsoft CMT</a>
                         </div>
