--- a/index.html
+++ b/index.html
@@ -1176,7 +1176,7 @@
                               <!-- Program Info -->
                               <!-- added its media query in top of the file -->
                               <div class="program-info">
-                                  REGISTRATION STARTED<span class="time">SOON</span><span class="dott spcialDottRegistration"></span>
+                                  REGISTRATION STARTED<span class="time">15 Sep 2024</span><span class="dott spcialDottRegistration"></span>
                               </div>
                               <h3><a>Get registered on Microsoft CMT.</a></h3>
                           </div>
@@ -1191,9 +1191,9 @@
                           <div class="content-inner">
                               <!-- Program Info -->
                               <div class="program-info">
-                                 SUBMIT PAPER<span class="time">5 Nov 2024</span><span class="dott"></span>
+                                 SUBMISSIONS OPEN<span class="time">Deadline: 5 Nov 2024</span><span class="dott"></span>
                               </div>
-                              <h3><a>Submit your paper through Microsoft CMT.</a></h3>
+                              <h3><a><b>Submit paper on Microsoft CMT.</b></a></h3>
                           </div>
                       </div>
                   </div>
