--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
                           <div class="content-inner">
                               <!-- Program Info -->
                               <div class="program-info">
-                                 SUBMISSIONS OPEN<span class="time">Deadline: 5 Nov 2024</span><span class="dott"></span>
+                                 SUBMISSIONS OPEN<span class="time">5 Nov 2024</span><span class="dott"></span>
                               </div>
                               <h3><a><b>Submit paper on Microsoft CMT.</b></a></h3>
                           </div>
