--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@
                       <div class="content col-lg-6 col-md-12 col-sm-12">
                           <div class="content-inner">
                               <!-- Program Info -->
-                              <div class="program-info">
+                              <div class="program-info makeDotResponsive">
                                  SUBMISSIONS OPEN<span class="time">Deadline: 5 Nov 2024</span><span class="dott"></span>
                               </div>
                               <h3><a><b>Submit paper on Microsoft CMT.</b></a></h3>
