--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
                               <div class="program-info">
                                   REGISTRATION STARTED<span class="time">15 Sep 2024</span><span class="dott spcialDottRegistration"></span>
                               </div>
-                              <h3><a><b></b>Get registered on Microsoft CMT.<b></b></a></h3>
+                              <h3><a class="bold">Get registered on Microsoft CMT.</a></h3>
                           </div>
                       </div>
                   </div>
@@ -1193,7 +1193,7 @@
                               <div class="program-info">
                                  SUBMISSIONS OPEN<span class="time">Deadline: 5 Nov 2024</span><span class="dott"></span>
                               </div>
-                              <h3><a><b>Submit paper on Microsoft CMT.</b></a></h3>
+                              <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
                           </div>
                       </div>
                   </div>
@@ -1209,7 +1209,7 @@
                                   REVIEW<span class="time">WILL BE INFORMED</span>
                                   <span class="dott spcialDottReview"></span>
                               </div>
-                              <h3><a>Paper is blind reviewed by experts.</a></h3>
+                              <h3><a class="bold">Paper is blind reviewed by experts.</a></h3>
                           </div>
                       </div>
                   </div>
@@ -1225,7 +1225,7 @@
                               <div class="program-info specialBox"  >
                                   Acceptance Notification<span class="time">30 Nov 2024</span><span class="dott"></span>
                               </div>
-                              <h3><a>Accepted papers will be notified through email.</a></h3>
+                              <h3><a class="bold">Accepted papers will be notified through email.</a></h3>
                           </div>
                       </div>
                   </div>
@@ -1241,7 +1241,7 @@
                               <div class="program-info specialBoxCameraReady">
                                   Camera Ready Submissions<span class="time">15 Dec 2024</span><span class="dott" ></span>
                               </div>
-                              <h3><a>Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
+                              <h3><a class="bold">Camera Ready Submission and Registration will be open for accepted papers.</a></h3>
                           </div>
                       </div>
                   </div>
@@ -1257,7 +1257,7 @@
                               <div class="program-info paperPresentationBox"  >
                                   Paper Presentation<span class="time">18-19 Jan 2025</span><span class="dott"></span>
                               </div>
-                              <h3><a>Accepted Papers will be presented in conference in hybrid mode.</a></h3>
+                              <h3><a class="bold">Accepted Papers will be presented in conference in hybrid mode.</a></h3>
                           </div>
                       </div>
                   </div>
@@ -1274,7 +1274,7 @@
                                   PUBLISH<span class="time">WILL BE INFORMED</span><span class="dott"></span>
                               </div>
                               <h3>
-                                  <a>Accepted papers will be published in the SCEECS 2025
+                                  <a class="bold">Accepted papers will be published in the SCEECS 2025
                                       Conference Proceedings and submitted to IEEE Xplore.</a>
                               </h3>
                           </div>
