Added media query for dots alignment

--- a/callforpaper.html
+++ b/callforpaper.html
@@ -434,22 +434,22 @@
                     <h2>How it Works</h2>
                     <div class="separator"></div>
                 </div>
-                <div class="inner-container">
+               <div class="inner-container">
                     <!-- Programs Block -->
-                    <div class="programs-block">
+                <!--    <div class="programs-block">
                         <div class="inner-block clearfix">
                             <div class="content col-lg-6 col-md-12 col-sm-12">
-                                <div class="content-inner">
+                                <div class="content-inner">     -->
                                     <!-- Program Info -->
                                     <!-- added its media query in top of the file -->
-                                    <div class="program-info">
+                <!--                    <div class="program-info">
                                         REGISTRATION STARTED<span class="time">15 Sep 2024</span><span class="dott spcialDottRegistration"></span>
                                     </div>
                                     <h3><a class="bold">Get registered on Microsoft CMT.</a></h3>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>  -->
 
                     <!-- Programs Block -->
                     <div class="programs-block style-two">
