--- a/index.html
+++ b/index.html
@@ -38,12 +38,15 @@
         }
         .specialBoxCameraReady{
             left: -420px !important;
+            padding-right:66px !important;
         }
         .paperPresentationBox{
             right: -348px !important;
+            padding-left: 66px !important;
         }
         .publishBox{
             left: -277px !important; 
+            padding-right: 70px !important;
         }
         .reviewBox{
             left: -272px !important;
