Applied changes to CallforPapers also Added CMT link "here" and deadline changes to 15 NOV

--- a/callforpaper.html
+++ b/callforpaper.html
@@ -461,9 +461,10 @@
                                 <div class="content-inner">
                                     <!-- Program Info -->
                                     <div class="program-info makeDotResponsive">
-                                       SUBMISSIONS OPEN<span class="time">5 Nov 2025</span><span class="dott"></span>
+                                       SUBMISSIONS OPEN<span class="time">15 Nov 2025</span><span class="dott"></span>
                                     </div>
                                     <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
+                                    <span ><a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank">here</a></span>
                                 </div>
                             </div>
                         </div>
