--- a/index.html
+++ b/index.html
@@ -1195,9 +1195,10 @@
                               <!-- Program Info -->
 
                               <div class="program-info makeDotResponsive">
-                                 SUBMISSIONS OPEN<span class="time">5 Nov 2024</span><span class="dott"></span>
+                                 SUBMISSIONS OPEN<span class="time">15 Nov 2024</span><span class="dott"></span>
                               </div>
                               <h3><a class="bold">Submit paper on Microsoft CMT.</a></h3>
+                              <span><a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank">here</a></span>
                           </div>
                       </div>
                   </div>
