--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
    #title{
        text-align: center;
        color:rgb(82, 4, 134);
-       font-size: 1.3rem;
+       font-size: 1.5rem;
        text-transform: uppercase;
+       font-family: 'Times New Roman', Times, serif;
+       font-weight: bold;
    }
    #mainHeading{
        text-align: center;
@@ -2449,17 +2451,24 @@
                 <i class="ri-close-line"></i>
             </span>
             <div id="boxL">
-                <p id="title">SCEECS 2025 Workshop 🛠️</p>
-                <p class="imagebox">
+                <p id="title">SCEECS 2025</p>
+                <!-- <p class="imagebox">
                   <img src="./codeHelp.png" alt="">
                   <img src="./cybrom.png" alt="">
                 </p>
                 <p id="mainHeading">Join us for an exclusive workshop featuring expert sessions by <span style="color: orangered;">Lakshay Kumar</span>  and <span style="color: orangered;"> Love Babbar</span>, curated by Cybrom.</p>
-                <p id="deadlineDisc">⏰ Time's ticking! Register now. 🚀 Limited seats.</p>
+                <p id="deadlineDisc">⏰ Time's ticking! Register now. 🚀 Limited seats.</p> -->
                 <!-- <p id="disc">SCEECS 2025 is Here!</p> -->
-                <div id="btn">
+                <!-- <div id="btn">
                     <a href="https://linktr.ee/IEEE_MANIT" target="_blank"><button style="cursor: pointer;">Register Now</button></a>
-                </div>
+                </div> -->
+
+                <!-- Submissions extended from 5 Nov to 15 Nov -->
+                <p id="mainHeading">Deadline for SCEECS Paper submission has been extended to <span style="color: orangered;">15 Nov 2024.</span></p>
+                <p id="deadlineDisc">Submit paper on Microsoft CMT.</p>
+                <div id="btn">
+                  <a href="https://cmt3.research.microsoft.com/User/Login?ReturnUrl=%2FSCEECS2025" target="_blank"><button style="cursor: pointer ;font-weight:bold;">Submit here</button></a>
+              </div>
             </div>
         </div>
         <!-- Pop UPs  End-->
