Changed faculty name from Dr. Lalita Gupta to Dr. Atul Kumar

--- a/about.html
+++ b/about.html
@@ -386,10 +386,10 @@
                 <div class="dots-one"></div>
                 <div class="dots-two"></div>
                 <div class="image">
-                  <img src="images/resource/LalitaGupta.jpg" alt="" />
+                  <img src="images/resource/Dr.Atul.Kumar.jpg" alt="" />
                 </div>
                 <div class="lower-content">
-                  <h3><a href="#">Dr. Lalita Gupta</a></h3>
+                  <h3><a href="#">Dr. Atul Kumar</a></h3>
                   <div class="designation">Publication Chair</div>
                 </div>
               </div>
