--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
               <div class="buttons-box clearfix">
                 <a href="https://ieeenitb.com/" target="_blank"><span class="theme-btn btn-style-two">Visit
                     IEEE-MSB</span></a>
-                <a id="scrollBtn"><span class="theme-btn btn-style-three ">Check Scheduling</span></a>
+                <a href='#check'><span class="theme-btn btn-style-three ">Check Scheduling</span></a>
               </div>
             </div>
           </div>
